<?xml version="1.0" encoding="UTF-8"?>
<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.1.0"
         xsi:schemaLocation="http://maven.apache.org/POM/4.1.0 https://maven.apache.org/xsd/maven-4.1.0.xsd"
         root="true">

    <modelVersion>4.1.0</modelVersion>

    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>4.0.0</version>
    </parent>

    <groupId>de.dfutil</groupId>
    <artifactId>datafactoryutilities-aggregator-parent</artifactId>
    <version>0.1-SNAPSHOT</version>

    <packaging>pom</packaging>

    <subprojects>
        <subproject>datafactoryutilities-adressinformationprovider</subproject>
        <subproject>datafactoryutilities-commons</subproject>
        <subproject>datafactoryutilities-downloader</subproject>
        <subproject>datafactoryutilities-importer</subproject>
    </subprojects>

    <properties>
        <java.version>25</java.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
    </properties>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <compilerArgument>-proc:full</compilerArgument>
                </configuration>
            </plugin>
        </plugins>
    </build>

</project>
